--- a/EC_Launcher/App.xaml
+++ b/EC_Launcher/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="EC_Launcher.App"
+﻿<prism:PrismApplication x:Class="EC_Launcher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:EC_Launcher"
-             StartupUri="Views/MainWindow.xaml" 
-             Startup="Application_Startup">
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:local="clr-namespace:EC_Launcher">
     
     <Application.Resources>
         <ResourceDictionary>
@@ -16,4 +15,4 @@
         </ResourceDictionary>
     </Application.Resources>
     
-</Application>
+</prism:PrismApplication>
