--- a/EC_Launcher/Resources/Lang.xaml
+++ b/EC_Launcher/Resources/Lang.xaml
@@ -15,8 +15,8 @@
     <v:String x:Key="m_DevMode">Developer Mode</v:String>
     
     <!--Settings Window-->
-    <v:String x:Key="m_GameDirLabel">Game Directory:</v:String>
-    <v:String x:Key="m_ModDirLabel">Mod Directory:</v:String>
+    <v:String x:Key="m_GameDirLabel">Game Path:</v:String>
+    <v:String x:Key="m_ModDirLabel">Mod Path:</v:String>
     <v:String x:Key="m_LanguageLabel">Language:</v:String>
     <v:String x:Key="m_SteamVersionChkBox">Steam version (licensed copy)</v:String>
     
