--- a/EC_Launcher/Views/DonatePage.xaml
+++ b/EC_Launcher/Views/DonatePage.xaml
@@ -1,16 +1,15 @@
-﻿<Window x:Class="EC_Launcher.DonateWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EC_Launcher"
-        mc:Ignorable="d"
-        Title="Donate" 
-        Height="380" 
-        Width="457" 
-        Closing="Window_Closing" 
-        WindowStartupLocation="CenterOwner" 
-        ResizeMode="NoResize">
+﻿<Page x:Class="EC_Launcher.Views.DonatePage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"       
+      xmlns:local="clr-namespace:EC_Launcher.Views"
+      xmlns:prism="http://prismlibrary.com/"
+      prism:ViewModelLocator.AutoWireViewModel="True"
+      mc:Ignorable="d" 
+      d:DesignHeight="343" 
+      d:DesignWidth="548"
+      Title="DonatePageView">
 
     <Grid>
         <Grid.Background>
@@ -20,12 +19,12 @@
             </LinearGradientBrush>
         </Grid.Background>
 
-        <TextBlock Text="{DynamicResource m_DonateDesc}" TextWrapping="Wrap" Foreground="White" TextDecorations="{x:Null}" FontWeight="Bold" Height="58" VerticalAlignment="Top" Margin="5,5,5,0"/>
-        <TextBlock HorizontalAlignment="Left" Margin="195,63,0,0" TextWrapping="Wrap" Text="{DynamicResource m_DonateWalletsLabel}" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
-        
-        <WrapPanel HorizontalAlignment="Left" Height="245" Margin="10,84,0,0" VerticalAlignment="Top" Width="430">
+        <TextBlock Text="{DynamicResource m_DonateDesc}" TextWrapping="Wrap" Foreground="White" TextDecorations="{x:Null}" FontWeight="Bold" Height="34" VerticalAlignment="Top" Margin="10,38,10,0" FontSize="10"/>
+        <TextBlock HorizontalAlignment="Left" Margin="195,77,0,0" TextWrapping="Wrap" Text="{DynamicResource m_DonateWalletsLabel}" VerticalAlignment="Top" Foreground="White" FontWeight="Bold"/>
+
+        <WrapPanel HorizontalAlignment="Left" Height="245" Margin="10,98,0,0" VerticalAlignment="Top" Width="430">
             <!--Web money-->
-            <Button x:Name="WebMoneyBtn" Background="{x:Null}" BorderBrush="{x:Null}" Click="WebMoneyBtn_Click">
+            <Button Command="{Binding GoToPaymentFormCommand}" CommandParameter="https://www.wmtransfer.com/eng/inout/topup.shtml" Background="{x:Null}" BorderBrush="{x:Null}">
                 <Image Height="58" Width="184" Source="/EC_Launcher;component/Icons/webmoney_logo.png"/>
             </Button>
             <StackPanel Height="50" Width="136" Margin="5,0,0,0">
@@ -33,15 +32,15 @@
                 <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="WMR: R829584988832" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="15" Background="{x:Null}" BorderBrush="{x:Null}"/>
                 <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="WMX: X250174717185" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="15" Background="{x:Null}" BorderBrush="{x:Null}"/>
             </StackPanel>
-            
+
             <!--Yandex money-->
-            <Button x:Name="YandexMoneyBtn" Background="{x:Null}" BorderBrush="{x:Null}" Click="YandexMoneyBtn_Click">
+            <Button Command="{Binding GoToPaymentFormCommand}" CommandParameter="https://money.yandex.ru/to/410017131230374" Background="{x:Null}" BorderBrush="{x:Null}">
                 <Image Height="58" Width="184" Source="/EC_Launcher;component/Icons/yamoney_logo.png"/>
             </Button>
             <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="410017131230374" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="18" Margin="0,20,0,0" Background="{x:Null}" BorderBrush="{x:Null}"/>
-            
+
             <!--Qiwi-->
-            <Button x:Name="QiwiBtn" Background="{x:Null}" BorderBrush="{x:Null}" Click="QiwiBtn_Click">
+            <Button Command="{Binding GoToPaymentFormCommand}" CommandParameter="https://qiwi.com/payment/form/99" Background="{x:Null}" BorderBrush="{x:Null}">
                 <Image Height="58" Width="184" Source="/EC_Launcher;component/Icons/qiwi_logo.png"/>
             </Button>
             <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="+998979250729" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="18" Margin="0,20,0,0" Background="{x:Null}" BorderBrush="{x:Null}"/>
@@ -52,6 +51,8 @@
             </Button>
             <TextBox IsReadOnly="True" HorizontalAlignment="Left" TextWrapping="Wrap" Text="1FjG9a7jzoW5SgLsAGZcxXAc82bpmyVWN6" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="18" Margin="0,20,0,0" Width="255" Background="{x:Null}" BorderBrush="{x:Null}"/>
         </WrapPanel>
+        <Button Command="{Binding BackCommand}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="33" Height="33" Background="{x:Null}" BorderBrush="{x:Null}">
+            <Image Source="/EC_Launcher;component/Icons/back_button.png"/>
+        </Button>
     </Grid>
-
-</Window>
+</Page>
