--- a/EC_Launcher/Views/ReportBugPage.xaml
+++ b/EC_Launcher/Views/ReportBugPage.xaml
@@ -13,10 +13,10 @@
 
     <Grid>
         <Grid.Background>
-            <RadialGradientBrush>
-                <GradientStop Color="Black"/>
-                <GradientStop Color="#FF212020" Offset="1"/>
-            </RadialGradientBrush>
+            <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                <GradientStop Color="#FF2F2F2F"/>
+                <GradientStop Color="#FF252525" Offset="1"/>
+            </LinearGradientBrush>
         </Grid.Background>
 
         <Button Command="{Binding BackCommand}" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Width="33" Height="33" Background="{x:Null}" BorderBrush="{x:Null}">
