--- a/EC_Launcher/Resources/Lang.ru-RU.xaml
+++ b/EC_Launcher/Resources/Lang.ru-RU.xaml
@@ -30,7 +30,7 @@
 
     <!--Donate Window-->
     <v:String x:Key="m_DonateDesc">
-        Поддержите будущего проекта и состояние сервера. Пожалуйста, укажите ваше имя в комментарии к платежу. Лучшие спонсоры попадет в списке топа (top-list). С наилучшими пожеланиями, EC Dev Team
+        Поддержите будущего проекта и состояние сервера. Пожалуйста, укажите ваше имя (или Discord хештег) в комментарии к платежу. Лучшие спонсоры попадет в списке топа (top-list). С наилучшими пожеланиями, EC Dev Team
     </v:String>
     <v:String x:Key="m_DonateWalletsLabel">Наши кошельки для оплаты:</v:String>
 
