--- a/EC_Launcher/Resources/Lang.xaml
+++ b/EC_Launcher/Resources/Lang.xaml
@@ -29,7 +29,7 @@
 
     <!--Donate Window-->
     <v:String x:Key="m_DonateDesc">
-        Donate for support future of project and server. Please include your name in the payment comment. Top donaters will be in the list of project supporters (top-list). Best regards, EC Dev Team
+        Donate money for support future of project and server. Please include your name (or Discord hashtag) in the payment comment. Top donaters will be in the list of project supporters (top-list). Best regards, EC Dev Team
     </v:String>
     <v:String x:Key="m_DonateWalletsLabel">Our payment wallets:</v:String>
     
